--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <hr>
     <div id="show"></div>
     <hr>
-    <script src="show.js"></script>
+    <script src="js/show.js"></script>
   </body>
 </html>
 
