--- a/analyze.html
+++ b/analyze.html
@@ -14,7 +14,6 @@
     <div id="log"></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/opentype.js/0.6.3/opentype.js"></script>
-    <script src="fonts.js"></script>
-    <script src="index.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
