--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
     <p>you can click table headings to sort by each column</p>
     <p>if you click a font, you'll see the other fonts sorted by similarity to that clicked font. most similar at the top</p>
     <hr>
+    <img style="width: 1000px; height: 1000px;" src="graph.svg" alt="graph of fonts">
+    <hr>
     <div id="distances"></div>
     <hr>
     <div id="show"></div>
-    <hr>
     <script src="js/show.js"></script>
   </body>
 </html>
